Updated NetisHR files

--- a/netishr/administrator.html
+++ b/netishr/administrator.html
@@ -462,6 +462,10 @@
                                         <div><a href="administrator_job_wla.html">Workload Analysis</a>
                                             <div class="small">Settings for workload analysis</div>
                                         </div>
+                                        <p></p>
+                                        <div><a href="Administrator_group_competency.html">Group Competency Settings</a>
+                                            <div class="small">Settings for Group Competency</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="ibox float-e-margins">
@@ -473,6 +477,9 @@
                                     <div class="ibox-content">
                                         <a href="person_information_settings.html">Persons Information Setting</a>
                                         <div class="small">Information configuration for person information</div>
+                                        <p></p>
+                                        <a href="#">Upload Persons</a>
+                                        <div class="small">Upload Person information</div>
                                     </div>
                                 </div>
                             </div>
