--- a/netishr/competency_dictionary_new.html
+++ b/netishr/competency_dictionary_new.html
@@ -573,15 +573,20 @@
 
                                 <div class="clients-list">
                                     <ul class="nav nav-tabs">
-                                        <li class="active"><a data-toggle="tab" href="#tab-1" data-placement="bottom" title="Tooltip on bottom"><i class="fa fa-user"></i>1</a></li>
+                                        <li class="active"><a data-toggle="tab" href="#tab-1"><i class="fa fa-briefcase"></i>1</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-2"><i class="fa fa-briefcase"></i>2</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-3"><i class="fa fa-briefcase"></i>3</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-4"><i class="fa fa-briefcase"></i>4</a></li>
                                         <li class=""><a data-toggle="tab" href="#tab-5"><i class="fa fa-briefcase"></i>5</a></li>
+                                        <li class=""><button type="button" class="btn-xs btn-primary"><i class="fa fa-plus"></i></button></li>
                                     </ul>
                                     <div class="tab-content">
                                         <div id="tab-1" class="tab-pane active">
-
+                                             <div>
+                                                 <button type="button" class="btn-xs btn-primary">Delete</button>
+                                                 <button type="button" class="btn-xs btn-primary">Move to level below</button>
+                                                 <button type="button" class="btn-xs btn-primary" >Move to level up</button>
+                                             </div>
                                             <form method="get" class="form-horizontal">
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label">Level name: </label>
@@ -601,7 +606,7 @@
                                                     <table class="table">
                                                         <thead>
                                                             <tr>
-                                                                <th>Order</th>
+                                                                <th>No</th>
                                                                 <th>Description</th>
                                                                 <th>
                                                                     <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newindicator">New indicator</button>
@@ -615,12 +620,6 @@
                                                                                         <p>Please enter new indicator.</p>
 
                                                                                         <form role="form">
-                                                                                            <div class="form-group">
-                                                                                                <label class="col-sm-2 control-label">Order: </label>
-                                                                                                <div class="col-sm-10">
-                                                                                                    <input type="text" class="form-control">
-                                                                                                </div>
-                                                                                            </div>
                                                                                             <div class="form-group">
                                                                                                 <label class="col-sm-2 control-label">Description: </label>
                                                                                                 <div class="col-sm-10">
@@ -681,6 +680,11 @@
 
                                         </div>
                                         <div id="tab-2" class="tab-pane">
+                                             <div>
+                                                 <button type="button" class="btn-xs btn-primary">Delete</button>
+                                                 <button type="button" class="btn-xs btn-primary">Move to level below</button>
+                                                 <button type="button" class="btn-xs btn-primary" >Move to level up</button>
+                                             </div>
 
                                             <form method="get" class="form-horizontal">
                                                 <div class="form-group">
@@ -697,10 +701,11 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <div class="hr-line-dashed"></div>
+                                                    <label class="col-sm-2 control-label">Indicators: </label>
                                                     <table class="table">
                                                         <thead>
                                                             <tr>
-                                                                <th>Order</th>
+                                                                <th>No</th>
                                                                 <th>Description</th>
                                                                 <th>
                                                                     <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newindicator">New indicator</button>
@@ -714,12 +719,6 @@
                                                                                         <p>Please enter new indicator.</p>
 
                                                                                         <form role="form">
-                                                                                            <div class="form-group">
-                                                                                                <label class="col-sm-2 control-label">Order: </label>
-                                                                                                <div class="col-sm-10">
-                                                                                                    <input type="text" class="form-control">
-                                                                                                </div>
-                                                                                            </div>
                                                                                             <div class="form-group">
                                                                                                 <label class="col-sm-2 control-label">Description: </label>
                                                                                                 <div class="col-sm-10">
@@ -752,6 +751,11 @@
 
                                         </div>
                                         <div id="tab-3" class="tab-pane">
+                                             <div>
+                                                 <button type="button" class="btn-xs btn-primary">Delete</button>
+                                                 <button type="button" class="btn-xs btn-primary">Move to level below</button>
+                                                 <button type="button" class="btn-xs btn-primary" >Move to level up</button>
+                                             </div>
 
                                             <form method="get" class="form-horizontal">
                                                 <div class="form-group">
@@ -768,10 +772,11 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <div class="hr-line-dashed"></div>
+                                                    <label class="col-sm-2 control-label">Indicators: </label>
                                                     <table class="table">
                                                         <thead>
                                                             <tr>
-                                                                <th>Order</th>
+                                                                <th>No</th>
                                                                 <th>Description</th>
                                                                 <th>
                                                                     <button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#newindicator">New indicator</button>
@@ -785,12 +790,6 @@
                                                                                         <p>Please enter new indicator.</p>
 
                                                                                         <form role="form">
-                                                                                            <div class="form-group">
-                                                                                                <label class="col-sm-2 control-label">Order: </label>
-                                                                                                <div class="col-sm-10">
-                                                                                                    <input type="text" class="form-control">
-                                                                                                </div>
-                                                                                            </div>
                                                                                             <div class="form-group">
                                                                                                 <label class="col-sm-2 control-label">Description: </label>
                                                                                                 <div class="col-sm-10">
@@ -823,6 +822,11 @@
 
                                         </div>
                                         <div id="tab-4" class="tab-pane">
+                                             <div>
+                                                 <button type="button" class="btn-xs btn-primary">Delete</button>
+                                                 <button type="button" class="btn-xs btn-primary">Move to level below</button>
+                                                 <button type="button" class="btn-xs btn-primary" >Move to level up</button>
+                                             </div>
 
                                             <form method="get" class="form-horizontal">
                                                 <div class="form-group">
@@ -839,10 +843,11 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <div class="hr-line-dashed"></div>
+                                                    <label class="col-sm-2 control-label">Indicators: </label>
                                                     <table class="table">
                                                         <thead>
                                                             <tr>
-                                                                <th>Order</th>
+                                                                <th>No</th>
                                                                 <th>Description</th>
                                                                 <th>
                                                                     <th>
@@ -857,12 +862,6 @@
                                                                                             <p>Please enter new indicator.</p>
 
                                                                                             <form role="form">
-                                                                                                <div class="form-group">
-                                                                                                    <label class="col-sm-2 control-label">Order: </label>
-                                                                                                    <div class="col-sm-10">
-                                                                                                        <input type="text" class="form-control">
-                                                                                                    </div>
-                                                                                                </div>
                                                                                                 <div class="form-group">
                                                                                                     <label class="col-sm-2 control-label">Description: </label>
                                                                                                     <div class="col-sm-10">
@@ -896,7 +895,11 @@
 
                                         </div>
                                         <div id="tab-5" class="tab-pane">
-
+                                             <div>
+                                                 <button type="button" class="btn-xs btn-primary">Delete</button>
+                                                 <button type="button" class="btn-xs btn-primary">Move to level below</button>
+                                                 <button type="button" class="btn-xs btn-primary" >Move to level up</button>
+                                             </div>
                                             <form method="get" class="form-horizontal">
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label">Level name: </label>
@@ -912,11 +915,12 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <div class="hr-line-dashed"></div>
+                                                    <label class="col-sm-2 control-label">Indicators: </label>
 
                                                     <table class="table">
                                                         <thead>
                                                             <tr>
-                                                                <th>Order</th>
+                                                                <th>No</th>
                                                                 <th>Description</th>
                                                                 <th>
                                                                     <th>
@@ -931,12 +935,6 @@
                                                                                             <p>Please enter new indicator.</p>
 
                                                                                             <form role="form">
-                                                                                                <div class="form-group">
-                                                                                                    <label class="col-sm-2 control-label">Order: </label>
-                                                                                                    <div class="col-sm-10">
-                                                                                                        <input type="text" class="form-control">
-                                                                                                    </div>
-                                                                                                </div>
                                                                                                 <div class="form-group">
                                                                                                     <label class="col-sm-2 control-label">Description: </label>
                                                                                                     <div class="col-sm-10">
