Updated NetisHR files

--- a/netishr/site_management.html
+++ b/netishr/site_management.html
@@ -429,6 +429,14 @@
                                             <div class="small">Site Settings</div>
                                         </div>
                                         <p></p>
+                                        <div><a href="administrator_general_roles.html">Roles Management</a>
+                                            <div class="small">Manage roles and system users</div>
+                                        </div>
+                                        <p></p>
+                                        <div><a href="administrator_general_users.html">Users Management</a>
+                                            <div class="small">Manage roles and system users</div>
+                                        </div>
+                                        <p></p>
                                         <div><a href="#">Domain Mappings</a>
                                             <div class="small">Domain Mappings</div>
                                         </div>
