--- a/netishr/myaccount.html
+++ b/netishr/myaccount.html
@@ -47,10 +47,10 @@
                     </li>
 
                     <li>
-                        <a href="index.html"><i class="fa fa-diamond"></i><span class="nav-label">Main</span></a>
+                        <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Main</span></a>
                     </li>
                     <li>
-                        <a href="index.html"><i class="fa fa-th-large"></i><span class="nav-label">Organisation</span><span class="fa arrow"></span></a>
+                        <a href="index.html"><i class="fa fa-sitemap"></i><span class="nav-label">Organization</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li><a href="organisation_units.html">Units</a></li>
                             <li><a href="#">Structure<span class="fa arrow"></span></a>
@@ -73,7 +73,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-bar-chart-o"></i><span class="nav-label">Job</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-suitcase"></i><span class="nav-label">Job</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li><a href="#"><span class="nav-label">Competency Model</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
@@ -100,14 +100,14 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-envelope"></i> <span class="nav-label">Person</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-user"></i> <span class="nav-label">Person</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="persons.html">Staffs</a></li>
                             <li><a href="#">Applicants</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-pie-chart"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-graduation-cap"></i> <span class="nav-label">Recruitment</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="#">Manpower Planning</a></li>
                             <li><a href="#">Recruitment Planning</a></li>
@@ -115,7 +115,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-flask"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-line-chart"></i><span class="nav-label">Performance</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="graph_flot.html"><span class="nav-label">Indicators<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
@@ -134,15 +134,15 @@
                             <li><a href="#"><span class="nav-label">Planning</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
-                                        <a href="performance_planning.html">Result Targets (KPI)</a>
+                                        <a href="performance_planning_kpi.html">KPI</a>
                                     </li>
                                     <li>
-                                        <a href="#">Process Targets (Competency)</a>
+                                        <a href="performance_planning_competency.html">Competency</a>
                                     </li>
                                 </ul>
                             </li>
                             <li><a href="performance_coaching.html">Coaching</a></li>
-                            <li><a href="#">Evidence</a></li>
+                            <li><a href="performance_evidence.html">Evidence</a></li>
                             <li><a href="#"><span class="nav-label">Evaluation</span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
                                     <li>
@@ -170,7 +170,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-desktop"></i> <span class="nav-label">Career</span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-user-md"></i> <span class="nav-label">Career</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li><a href="#">Individual Career Plan</a></li>
                             <li><a href="#">Search Talent</a></li>
@@ -181,7 +181,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-sitemap"></i> <span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-usd"></i> <span class="nav-label">Remuneration </span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level  ">
                             <li>
                                 <a href="#">Personnel Administration <span class="fa arrow"></span></a>
@@ -234,15 +234,15 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="administrator.html"><i class="fa fa-diamond"></i><span class="nav-label">Administrator</span></a>
+                        <a href="administrator.html"><i class="fa fa-sliders"></i><span class="nav-label">Administrator</span></a>
                     </li>
                     <!-- This menu below is to be accessed only by site manager -->
                     <li>
-                        <a href="site_management.html"><i class="fa fa-diamond"></i><span class="nav-label">Site Management</span></a>
+                        <a href="site_management.html"><i class="fa fa-columns"></i><span class="nav-label">Site Management</span></a>
                     </li>
                     <!-- This menu below is to be accessed only by system manager -->
                     <li>
-                        <a href="system_management.html"><i class="fa fa-diamond"></i><span class="nav-label">System Management</span></a>
+                        <a href="system_management.html"><i class="fa fa-database"></i><span class="nav-label">System Management</span></a>
                     </li>
 
 
@@ -394,38 +394,6 @@
             <div class="wrapper wrapper-content animated fadeInRight">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="ibox float-e-margins">
-                            <!-- Show this ibox part only when user has HR Admin privilege -->
-                            <div class="ibox-title">
-                                <h5>Switch Branch</h5>
-                                <div class="ibox-tools">
-                                    <a class="collapse-link">
-                                        <i class="fa fa-chevron-up"></i>
-                                    </a>
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                        <i class="fa fa-wrench"></i>
-                                    </a>
-                                    <ul class="dropdown-menu dropdown-user">
-                                        <li><a href="#">Config option 1</a>
-                                        </li>
-                                        <li><a href="#">Config option 2</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="ibox-content">
-                                <form class="form-horizontal">
-                                    <p>You have HR Admin privilege so you can see other branches. Select current active branch.</p>
-                                    <div class="form-group">
-                                        <label class="col-lg-2 control-label">Active branch: </label>
-                                        <select data-placeholder="Choose a role..." class="chosen-select">
-                                            <option value="1">Branch 1</option>
-                                            <option value="1">Branch 2</option>
-                                        </select>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
                         <div class="ibox float-e-margins">
                             <!-- Show this ibox part when this user has more than one role -->
                             <div class="ibox-title">
